namespace Coop.Domain.Maintenance;

public enum UnitEntered
{
    MemberAtHome = 0,
    MemberNotAtHome = 1,
    EmergencyEntryRequired = 2
}
